rename "skip" in "dontIndex"